<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionMovies"
        android:icon="@drawable/ic_movies"
        android:title="@string/lbl_movies"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/actionCinema"
        android:icon="@drawable/ic_cinema"
        android:title="@string/lbl_cinemas"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionTickets"
        android:icon="@drawable/ic_tickets"
        android:title="@string/lbl_tickets"
        app:showAsAction="always" />
    <item
        android:id="@+id/actionProfile"
        android:icon="@drawable/ic_baseline_person_colored_24dp"
        android:title="@string/lbl_profile"
        app:showAsAction="always" />
</menu>